# galois

./: Cargo.toml  README.md
examples/: galois2_example.rs
src/: lib.rs
src/linear/: GF.rs  GF2.rs  gf.rs  mod.rs
tests/: GF_tests.rs  linear_tests.rs
